[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=5.5.2",
    "email-validator>=2.2.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "gspread>=6.2.1",
    "gunicorn>=23.0.0",
    "oauthlib>=3.3.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "requests-oauthlib>=2.0.0",
    "rsa>=4.9.1",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "google-oauth2-tool>=0.0.3",
]
